--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "einops>=0.8.1",
     "scikit-learn>=1.7.2",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
